--- a/MathQuizGame/dashboard.html
+++ b/MathQuizGame/dashboard.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-    <!-- Math Symbols Background -->
     <div class="math-symbols">
         <span class="math-symbol" style="top: 10%; left: 5%;">÷</span>
         <span class="math-symbol" style="top: 25%; left: 15%;">+</span>
@@ -35,7 +34,7 @@
         <span class="math-symbol" style="top: 92%; left: 10%;">0</span>
     </div>
 
-    <!-- Sidebar -->
+
     <aside class="sidebar">
         <div class="logo">
             <span class="logo-icon">∑</span>
@@ -69,7 +68,7 @@
             </a>
         </nav>
 
-        <a href="index.html" class="nav-item logout">
+        <a href="login.html" class="nav-item logout">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                 <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4" />
                 <polyline points="16,17 21,12 16,7" />
@@ -79,22 +78,16 @@
         </a>
     </aside>
 
-    <!-- Main Content -->
     <main class="main-content">
-        <!-- Header -->
         <header class="header">
             <div class="header-left">
                 <h1 id="pageTitle">Dashboard</h1>
             </div>
 
         </header>
-
-        <!-- Dashboard Section -->
         <section id="dashboardSection" class="section active">
             <div class="dashboard-layout">
-                <!-- Left Side - Stats and Quick Actions -->
                 <div class="dashboard-left">
-                    <!-- Stats Cards -->
                     <div class="stats-vertical">
                         <div class="stat-card">
                             <div class="stat-icon blue">
@@ -148,7 +141,6 @@
                     </div>
                 </div>
 
-                <!-- Right Side - Leaderboard -->
                 <div class="dashboard-right">
                     <div class="leaderboard-table">
                         <h2>🏆 Leaderboard</h2>
@@ -165,9 +157,8 @@
             </div>
         </section>
 
-        <!-- Quiz Section -->
+
         <section id="quizSection" class="section">
-            <!-- Quiz Setup -->
             <div class="quiz-setup" id="quizSetup">
 
                 <div class="setup-group">
@@ -215,7 +206,6 @@
                 </button>
             </div>
 
-            <!-- Quiz Game -->
             <div class="quiz-container" id="quizContainer" style="display: none;">
                 <div class="quiz-header">
                     <div class="quiz-info">
@@ -232,7 +222,6 @@
                     </div>
                 </div>
 
-                <!-- Live Stats -->
                 <div class="quiz-stats">
                     <div class="stat-item">
                         <span class="stat-label">Score</span>
@@ -276,7 +265,6 @@
             </div>
         </section>
 
-        <!-- Leaderboard Section -->
         <section id="leaderboardSection" class="section">
             <h2>🏆 Leaderboard</h2>
             <div class="leaderboard-table">
@@ -319,9 +307,7 @@
             </div>
         </section>
 
-        <!-- Profile Section -->
         <section id="profileSection" class="section">
-            <h2>👤 Your Profile</h2>
             <div class="profile-card">
                 <div class="profile-avatar">
                     <span id="profileAvatarDisplay">P</span>
