--- a/MathQuizGame/login.html
+++ b/MathQuizGame/login.html
@@ -182,6 +182,10 @@
 
 
         <div class="right-panel">
+            <div class="logo mobile-logo">
+                <span class="logo-icon">∑</span>
+                <span class="logo-text">MathQuiz</span>
+            </div>
             <div class="decorative-dots"></div>
             <div class="welcome-content">
                 <h1>Welcome!</h1>
