--- a/MathQuizGame/dashboard.html
+++ b/MathQuizGame/dashboard.html
@@ -81,6 +81,13 @@
     <main class="main-content">
         <header class="header">
             <div class="header-left">
+                <button id="menuToggle" class="menu-toggle">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="3" y1="12" x2="21" y2="12"></line>
+                        <line x1="3" y1="6" x2="21" y2="6"></line>
+                        <line x1="3" y1="18" x2="21" y2="18"></line>
+                    </svg>
+                </button>
                 <h1 id="pageTitle">Dashboard</h1>
             </div>
 
