--- a/MathQuizGame/index.html
+++ b/MathQuizGame/index.html
@@ -5,16 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Login to your account">
-    <title>Sign In</title>
+    <title>MathQuizGame</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="Login.css">
 </head>
 
 <body>
-
     <div class="math-symbols">
         <span class="math-symbol" style="top: 10%; left: 5%;">÷</span>
         <span class="math-symbol" style="top: 25%; left: 15%;">+</span>
@@ -36,7 +35,6 @@
     </div>
 
     <div class="container">
-
         <div class="left-panel">
             <div class="logo">
                 <span class="logo-icon">∑</span>
@@ -44,7 +42,6 @@
             </div>
 
             <div class="login-box">
-
 
                 <div id="signInSection" class="form-section active">
                     <h2>Sign In</h2>
@@ -99,7 +96,6 @@
                         New here? <a href="#" id="showSignUp">Create an Account</a>
                     </p>
                 </div>
-
 
                 <div id="signUpSection" class="form-section">
                     <h2>Sign Up</h2>
@@ -180,12 +176,7 @@
             </div>
         </div>
 
-
         <div class="right-panel">
-            <div class="logo mobile-logo">
-                <span class="logo-icon">∑</span>
-                <span class="logo-text">MathQuiz</span>
-            </div>
             <div class="decorative-dots"></div>
             <div class="welcome-content">
                 <h1>Welcome!</h1>
