--- a/MathQuizGame/dashboard.html
+++ b/MathQuizGame/dashboard.html
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <button class="btn-primary start-quiz-btn mobile-next-btn" id="nextToStep2">
-                        Next →
+                        Next
                     </button>
                 </div>
 
@@ -220,17 +220,17 @@
                         </div>
                     </div>
                     <div class="setup-step-buttons">
-                        <button class="btn-secondary mobile-back-btn" id="backToStep1">
-                            ← Back
+                        <button class="btn-primary mobile-back-btn" id="backToStep1">
+                            Back
                         </button>
                         <button class="btn-primary start-quiz-btn" onclick="beginQuiz()">
-                            Start Quiz →
+                            Start Quiz
                         </button>
                     </div>
                 </div>
 
                 <button class="btn-primary start-quiz-btn desktop-start-btn" onclick="beginQuiz()">
-                    Start Quiz →
+                    Start Quiz
                 </button>
             </div>
 
