--- a/MathQuizGame/index.html
+++ b/MathQuizGame/index.html
@@ -76,6 +76,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                                 <input type="password" id="password" name="password" placeholder="Password" required>
+                                <button type="button" class="toggle-password" data-target="password">Show</button>
                             </div>
                         </div>
 
@@ -147,6 +148,7 @@
                                 </svg>
                                 <input type="password" id="signupPassword" name="password" placeholder="Password"
                                     required>
+                                <button type="button" class="toggle-password" data-target="signupPassword">Show</button>
                             </div>
                         </div>
 
@@ -163,6 +165,7 @@
                                 </svg>
                                 <input type="password" id="confirmPassword" name="confirmPassword"
                                     placeholder="Confirm Password" required>
+                                <button type="button" class="toggle-password" data-target="confirmPassword">Show</button>
                             </div>
                         </div>
 
