--- a/MathQuizGame/dashboard.html
+++ b/MathQuizGame/dashboard.html
@@ -350,6 +350,7 @@
         </section>
     </main>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="dataService.js"></script>
     <script src="dashboard.js"></script>
 </body>
