--- a/MathQuizGame/index.html
+++ b/MathQuizGame/index.html
@@ -200,6 +200,7 @@
 
     <div id="toast-container" class="toast-container"></div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="dataService.js"></script>
     <script src="script.js"></script>
 </body>
