--- a/MathQuizGame/dashboard.html
+++ b/MathQuizGame/dashboard.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div id="toast-container" class="toast-container"></div>
     <div class="math-symbols">
         <span class="math-symbol" style="top: 10%; left: 5%;">÷</span>
         <span class="math-symbol" style="top: 25%; left: 15%;">+</span>
