--- a/MathQuizGame/index.html
+++ b/MathQuizGame/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="Login.css">
+    <link rel="icon" type="image/png" href="images/logo.png">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
     <div class="container">
         <div class="left-panel">
             <div class="logo">
-                <span class="logo-icon">∑</span>
+                <img src="images/logo.png" alt="MathQuiz Logo" class="logo-image">
                 <span class="logo-text">MathQuiz</span>
             </div>
 
@@ -95,6 +96,72 @@
 
                     <p class="signup-text">
                         New here? <a href="#" id="showSignUp">Create an Account</a>
+                    </p>
+                </div>
+
+                <div id="forgotSection" class="form-section">
+                    <h2>Reset Password</h2>
+
+                    <form class="login-form" id="forgotForm">
+                        <div id="forgotErrorMessage" class="error-message"></div>
+
+                        <div class="form-group">
+                            <div class="input-wrapper">
+                                <svg class="input-icon" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M4 4H20C21.1 4 22 4.9 22 6V18C22 19.1 21.1 20 20 20H4C2.9 20 2 19.1 2 18V6C2 4.9 2.9 4 4 4Z"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                    <path d="M22 6L12 13L2 6" stroke="currentColor" stroke-width="2"
+                                        stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                                <input type="email" id="forgotEmail" name="email" placeholder="Enter your email"
+                                    required>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="input-wrapper">
+                                <svg class="input-icon" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <rect x="3" y="11" width="18" height="11" rx="2" ry="2" stroke="currentColor"
+                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M7 11V7C7 5.67392 7.52678 4.40215 8.46447 3.46447C9.40215 2.52678 10.6739 2 12 2C13.3261 2 14.5979 2.52678 15.5355 3.46447C16.4732 4.40215 17 5.67392 17 7V11"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                                <input type="password" id="forgotNewPassword" name="newPassword"
+                                    placeholder="New Password" required>
+                                <button type="button" class="toggle-password"
+                                    data-target="forgotNewPassword">Show</button>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="input-wrapper">
+                                <svg class="input-icon" viewBox="0 0 24 24" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <rect x="3" y="11" width="18" height="11" rx="2" ry="2" stroke="currentColor"
+                                        stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                    <path
+                                        d="M7 11V7C7 5.67392 7.52678 4.40215 8.46447 3.46447C9.40215 2.52678 10.6739 2 12 2C13.3261 2 14.5979 2.52678 15.5355 3.46447C16.4732 4.40215 17 5.67392 17 7V11"
+                                        stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                                <input type="password" id="forgotConfirmPassword" name="confirmPassword"
+                                    placeholder="Confirm Password" required>
+                                <button type="button" class="toggle-password"
+                                    data-target="forgotConfirmPassword">Show</button>
+                            </div>
+                        </div>
+
+                        <button type="submit" class="login-btn">Reset Password</button>
+                    </form>
+
+                    <p class="signup-text">
+                        Back to <a href="#" id="backToSignIn">Sign In</a>
                     </p>
                 </div>
 
@@ -165,7 +232,8 @@
                                 </svg>
                                 <input type="password" id="confirmPassword" name="confirmPassword"
                                     placeholder="Confirm Password" required>
-                                <button type="button" class="toggle-password" data-target="confirmPassword">Show</button>
+                                <button type="button" class="toggle-password"
+                                    data-target="confirmPassword">Show</button>
                             </div>
                         </div>
 
