--- a/MathQuizGame/dashboard.html
+++ b/MathQuizGame/dashboard.html
@@ -99,53 +99,57 @@
             <div class="dashboard-layout">
                 <div class="dashboard-left">
                     <div class="stats-vertical">
-                        <div class="stat-card">
+                        <div class="stat-card mode-stat-card" data-mode="classic"
+                            style="cursor: pointer; transition: transform 0.2s; border: 2px solid transparent;">
                             <div class="stat-icon blue">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <polygon
-                                        points="12,2 15.09,8.26 22,9.27 17,14.14 18.18,21.02 12,17.77 5.82,21.02 7,14.14 2,9.27 8.91,8.26" />
-                                </svg>
+                                <img src="images/logo.png" alt="Classic"
+                                    style="width: 24px; height: 24px; object-fit: contain;">
                             </div>
                             <div class="stat-info">
-                                <h3>Total Score</h3>
-                                <p class="stat-value" id="totalScore">0</p>
+                                <h3>Classic Score</h3>
+                                <p class="stat-value" id="classicTotalScore">0</p>
                             </div>
                         </div>
-                        <div class="stat-card">
-                            <div class="stat-icon green">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14" />
-                                    <polyline points="22,4 12,14.01 9,11.01" />
-                                </svg>
-                            </div>
-                            <div class="stat-info">
-                                <h3>Quizzes Completed</h3>
-                                <p class="stat-value" id="quizzesCompleted">0</p>
-                            </div>
-                        </div>
-                        <div class="stat-card">
+                        <div class="stat-card mode-stat-card" data-mode="survival"
+                            style="cursor: pointer; transition: transform 0.2s; border: 2px solid transparent;">
                             <div class="stat-icon orange">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <circle cx="12" cy="12" r="10" />
-                                    <polyline points="12,6 12,12 16,14" />
-                                </svg>
+                                <span style="font-size: 20px;">⏳</span>
                             </div>
                             <div class="stat-info">
-                                <h3>Avg. Time</h3>
-                                <p class="stat-value" id="avgTime">0s</p>
+                                <h3>Survival Score</h3>
+                                <p class="stat-value" id="survivalTotalScore">0</p>
                             </div>
                         </div>
-                        <div class="stat-card">
+                        <div class="stat-card mode-stat-card" data-mode="blitz"
+                            style="cursor: pointer; transition: transform 0.2s; border: 2px solid transparent;">
                             <div class="stat-icon purple">
-                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M12 20V10" />
-                                    <path d="M18 20V4" />
-                                    <path d="M6 20v-4" />
-                                </svg>
+                                <span style="font-size: 20px;">⚡</span>
                             </div>
                             <div class="stat-info">
-                                <h3>Accuracy</h3>
-                                <p class="stat-value" id="accuracy">0%</p>
+                                <h3>Blitz Score</h3>
+                                <p class="stat-value" id="blitzTotalScore">0</p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div id="modeStatsDetails" class="mode-stats-details"
+                        style="display: none; background: white; border-radius: 12px; padding: 20px; box-shadow: 0 4px 6px -1px rgba(0,0,0,0.1);">
+                        <h3 id="modeStatsTitle" style="margin-bottom: 16px; font-size: 1.1rem; color: #374151;">Classic
+                            Stats</h3>
+                        <div style="display: flex; flex-wrap: wrap; justify-content: space-around; gap: 16px;">
+                            <div style="text-align: center;">
+                                <p style="font-size: 0.85rem; color: #6b7280; text-transform: uppercase;">Quizzes</p>
+                                <p class="stat-value" id="modeQuizzesCompleted"
+                                    style="font-size: 1.5rem; color: #10b981;">0</p>
+                            </div>
+                            <div style="text-align: center;">
+                                <p style="font-size: 0.85rem; color: #6b7280; text-transform: uppercase;">Avg Time</p>
+                                <p class="stat-value" id="modeAvgTime" style="font-size: 1.5rem; color: #f59e0b;">0s</p>
+                            </div>
+                            <div style="text-align: center;">
+                                <p style="font-size: 0.85rem; color: #6b7280; text-transform: uppercase;">Accuracy</p>
+                                <p class="stat-value" id="modeAccuracy" style="font-size: 1.5rem; color: #8b5cf6;">0%
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -153,7 +157,17 @@
 
                 <div class="dashboard-right">
                     <div class="leaderboard-table">
-                        <h2>🏆 Leaderboard</h2>
+                        <div
+                            style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 24px;">
+                            <h2 style="margin-bottom: 0;">🏆 Leaderboard</h2>
+                            <select id="leaderboardModeSelect" onchange="loadLeaderboard(this.value)"
+                                style="padding: 10px 36px 10px 16px; border-radius: 12px; border: 2px solid #e5e7eb; font-family: inherit; font-size: 0.95rem; font-weight: 600; color: #1f2937; cursor: pointer; outline: none; background-color: white; appearance: none; background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%236b7280%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'); background-repeat: no-repeat; background-position: right 12px top 50%; background-size: 12px auto; transition: all 0.2s ease; box-shadow: 0 2px 4px rgba(0,0,0,0.02);">
+                                <option value="total">🌍 All Modes</option>
+                                <option value="classic">🟦 Classic</option>
+                                <option value="survival">⏳ Survival</option>
+                                <option value="blitz">⚡ Blitz</option>
+                            </select>
+                        </div>
                         <div class="leaderboard-row header">
                             <span>Rank</span>
                             <span>Player</span>
@@ -174,20 +188,20 @@
                 <div id="modeSelectionContainer" class="setup-group" style="max-width: 100%;">
                     <h3>Game Modes</h3>
                     <div class="difficulty-options"
-                        style="display: flex; flex-direction: row; justify-content: center; gap: 48px; width: 100%;">
+                        style="display: flex; flex-direction: row; justify-content: center; flex-wrap: wrap; gap: 48px; width: 100%;">
                         <button class="difficulty-btn mode-card" data-mode="classic"
-                            style="flex: 1; max-width: 400px; min-width: 250px;">
+                            style="flex: 1 1 250px; max-width: 400px; min-width: 250px;">
                             <img src="images/logo.png" alt="Classic"
                                 style="width: 32px; height: 32px; object-fit: contain; margin-bottom: 4px;">
                             <span class="diff-label">Classic</span>
                         </button>
                         <button class="difficulty-btn mode-card" data-mode="survival"
-                            style="flex: 1; max-width: 400px; min-width: 250px;">
+                            style="flex: 1 1 250px; max-width: 400px; min-width: 250px;">
                             <span style="font-size: 24px; margin-bottom: 4px;">⏳</span>
                             <span class="diff-label">Survival</span>
                         </button>
                         <button class="difficulty-btn mode-card" data-mode="blitz"
-                            style="flex: 1; max-width: 400px; min-width: 250px;">
+                            style="flex: 1 1 250px; max-width: 400px; min-width: 250px;">
                             <span style="font-size: 24px; margin-bottom: 4px;">⚡</span>
                             <span class="diff-label">Blitz</span>
                         </button>
@@ -199,22 +213,26 @@
                         style="margin-bottom: 16px; font-size: 1rem; color: #6b7280; font-weight: 500; text-align: left;">
                         Choose Category</h3>
                     <div class="category-options"
-                        style="display: flex; flex-wrap: wrap; justify-content: center; gap: 16px; margin-bottom: 32px;">
-                        <button class="category-btn active" data-category="addition" style="flex: 1; min-width: 120px;">
+                        style="display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 16px; margin-bottom: 32px;">
+                        <button class="category-btn active" data-category="addition" style="width: 100%;">
                             <span class="cat-icon">+</span>
                             <span>Addition</span>
                         </button>
-                        <button class="category-btn" data-category="subtraction" style="flex: 1; min-width: 120px;">
+                        <button class="category-btn" data-category="subtraction" style="width: 100%;">
                             <span class="cat-icon">−</span>
                             <span>Subtraction</span>
                         </button>
-                        <button class="category-btn" data-category="multiplication" style="flex: 1; min-width: 120px;">
+                        <button class="category-btn" data-category="multiplication" style="width: 100%;">
                             <span class="cat-icon">×</span>
                             <span>Multiplication</span>
                         </button>
-                        <button class="category-btn" data-category="division" style="flex: 1; min-width: 120px;">
+                        <button class="category-btn" data-category="division" style="width: 100%;">
                             <span class="cat-icon">÷</span>
                             <span>Division</span>
+                        </button>
+                        <button class="category-btn" data-category="mixed" style="width: 100%;">
+                            <span class="cat-icon">🎲</span>
+                            <span>All</span>
                         </button>
                     </div>
 
@@ -246,29 +264,28 @@
                         style="margin-bottom: 16px; font-size: 1rem; color: #6b7280; font-weight: 500; text-align: left;">
                         Choose Category</h3>
                     <div class="category-options"
-                        style="display: flex; flex-wrap: wrap; justify-content: center; gap: 16px; margin-bottom: 32px;">
-                        <button class="category-btn active survival-cat" data-category="addition"
-                            style="flex: 1; min-width: 120px;">
+                        style="display: grid; grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); gap: 16px; margin-bottom: 32px;">
+                        <button class="category-btn active survival-cat" data-category="addition" style="width: 100%;">
                             <span class="cat-icon">+</span>
                             <span>Addition</span>
                         </button>
-                        <button class="category-btn survival-cat" data-category="subtraction"
-                            style="flex: 1; min-width: 120px;">
+                        <button class="category-btn survival-cat" data-category="subtraction" style="width: 100%;">
                             <span class="cat-icon">−</span>
                             <span>Subtraction</span>
                         </button>
-                        <button class="category-btn survival-cat" data-category="multiplication"
-                            style="flex: 1; min-width: 120px;">
+                        <button class="category-btn survival-cat" data-category="multiplication" style="width: 100%;">
                             <span class="cat-icon">×</span>
                             <span>Multiplication</span>
                         </button>
-                        <button class="category-btn survival-cat" data-category="division"
-                            style="flex: 1; min-width: 120px;">
+                        <button class="category-btn survival-cat" data-category="division" style="width: 100%;">
                             <span class="cat-icon">÷</span>
                             <span>Division</span>
                         </button>
-                        <button class="category-btn survival-cat" data-category="mixed"
-                            style="flex: 1; min-width: 120px;">
+                        <button class="category-btn survival-cat" data-category="pemdas" style="width: 100%;">
+                            <span class="cat-icon">( )</span>
+                            <span>Pemdas</span>
+                        </button>
+                        <button class="category-btn survival-cat" data-category="mixed" style="width: 100%;">
                             <span class="cat-icon">🎲</span>
                             <span>All</span>
                         </button>
